# tezyetkaz_api2

./: Makefile  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
apps/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py
root/: settings.py  urls.py
